chore: Finalize dependency sync and minor refactoring in MatchView